Fix icon spacing on chips

--- a/src/Chip/index.scss
+++ b/src/Chip/index.scss
@@ -7,6 +7,7 @@
   padding: wc.spacing(xxs) wc.spacing(xs);
   text-align: center;
   font-size: 12px;
+  gap: 4px;
   width: fit-content;
   margin: 1px;
   color: rgba(var(--zn-primary), 0.9);
